Primeros avances con Minio

--- a/admin/src/web/templates/ecuestre/create.html
+++ b/admin/src/web/templates/ecuestre/create.html
@@ -94,7 +94,7 @@
             <section class="d-flex flex-column gap-3">
                 <div>
                     <h5 class="border-bottom border-dark pb-2">Información general</h5>
-                    <p class="mt-0 mb-3">
+                    <p class="mt-0 mb-2">
                         Información básica acerca del nuevo integrante.
                     </p>
                 </div>
@@ -216,7 +216,7 @@
                     <thead>
                         <tr>
                             <th>Tipo</th>
-                            <th>Documento</th>
+                            <th>URL / Documento</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
@@ -226,7 +226,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <div class="d-flex flex-row gap-2 justify-content-end w-100">
+                <div class="mt-2 d-flex flex-row gap-2 justify-content-end w-100">
                     <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                         data-bs-target="#modal-attach-url">
                         <i style="transform: scale(0.8);" class="me-1 fa fa-link"></i>
@@ -280,7 +280,7 @@
                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5 fw-bolder text-uppercase" id="exampleModalLabel">Asignar
+                            <h1 class="modal-title fs-5 fw-bolder text-uppercase" id="exampleModalLabel">Agregar
                                 conductor</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
@@ -293,7 +293,7 @@
                                 {% endfor %}
                                 {% endif %}
                             </select>
-                            <p class="form-text mt-2 mb-0">Seleccione un conductor para asignar al caballo.</p>
+                            <p class="form-text mt-2 mb-0">Seleccione un conductor para asignarle al caballo.</p>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -309,7 +309,7 @@
                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5 fw-bolder text-uppercase" id="exampleModalLabel">Asignar
+                            <h1 class="modal-title fs-5 fw-bolder text-uppercase" id="exampleModalLabel">Agregar
                                 entrenador</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
@@ -323,7 +323,7 @@
                                 {% endfor %}
                                 {% endif %}
                             </select>
-                            <p class="form-text mt-2 mb-0">Seleccione un entrenador para asignar al caballo.</p>
+                            <p class="form-text mt-2 mb-0">Seleccione un entrenador para asignarle al caballo.</p>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
@@ -511,18 +511,40 @@
             return;
         }
 
-        // Aquí puedes agregar la lógica para subir el archivo a Minio o cualquier otro servicio
-        const filePath = `path/to/uploaded/files/${file.name}`; // Ejemplo de ruta del archivo
+        // Lógica para cargar archivos a Minio
+        const formData = new FormData();
+        formData.append('file', file);
+        formData.append('fileType', fileType);
 
-        // Agregar el archivo a la lista de documentos adjuntos
-        attachedFiles.push({ type: fileType, path: filePath });
+        fetch('/ecuestre/upload', {
+            method: 'POST',
+            body: formData
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    const filePath = data.filePath; // Ruta del archivo devuelta por el servidor
 
-        // Actualizar la tabla de documentos
-        updateDocumentsTable();
+                    // Cerrar el modal
+                    const modalCloseButton = document.querySelector('#modal-upload-file .btn-close');
+                    modalCloseButton.click();
 
-        // Cerrar el modal
-        const modalCloseButton = document.querySelector('#modal-upload-file .btn-close');
-        modalCloseButton.click();
+                    // Agregar el archivo a la lista de documentos adjuntos
+                    attachedFiles.push({ type: fileType, path: filePath, name: file.name });
+
+                    // Actualizar la tabla de documentos
+                    updateDocumentsTable();
+
+                    console.log(data)
+                    console.log(attachedFiles)
+                } else {
+                    alert('Error al subir el archivo.');
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('Error al subir el archivo.');
+            });
     }
 
     // Función para adjuntar URL
@@ -572,7 +594,7 @@
                 const newRow = document.createElement('tr');
                 newRow.innerHTML = `
                     <td>${file.type}</td>
-                    <td>${file.path || file.url}</td>
+                    <td>${file.name || file.url}</td>
                     <td>
                         <span class="text-danger" role="button" onclick="removeDocument(${index})">
                             <i style="transform: scale(0.9);" class="fa fa-trash me-1"></i>
