--- a/admin/src/web/templates/team/show.html
+++ b/admin/src/web/templates/team/show.html
@@ -62,8 +62,14 @@
             {% if documents %}
             <ul>
                 {% for document in documents %}
-                <li>
-                    <a href="{{ document.url }}" target="_blank">{{ document.name }}</a>
+                <li >
+                    <a href="{{ document.url }}" target="_blank" style="flex-grow: 1; font-size: 1.2rem;">{{ document.name }}</a>
+                    <form action="{{ url_for('team.destroy_document', id=member.id, document_id=document.id) }}" method="POST"
+                        style="display:inline;">
+                        <button type="submit" class="btn btn-danger btn-icon">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
+                    </form>
                 </li>
                 {% endfor %}
             </ul>
