--- a/admin/src/web/templates/team/index.html
+++ b/admin/src/web/templates/team/index.html
@@ -14,15 +14,15 @@
 <form action="{{ url_for('team.index') }}" method="GET" class="form-inline mb-3" style="display: flex; flex-wrap: wrap; gap: 10px; align-items: center;">
   <div class="form-group mr-3" style="margin-bottom: 10px;">
     <label for="name">Nombre:</label>
-    <input type="text" class="form-control" id="name" name="name" value="{{ filters.name or '' }}" placeholder="Nombre" style="width: auto; display: inline-block;">
+    <input type="text" class="form-control" id="name" name="name" value="{{ filters.name or '' }}" placeholder="Nombre" style="width: auto; display: inline-block;" pattern="[A-Za-zñÑáéíóúÁÉÍÓÚüÜ\s]+">
   </div>
   <div class="form-group mr-3" style="margin-bottom: 10px;">
     <label for="last_name">Apellido:</label>
-    <input type="text" class="form-control" id="last_name" name="last_name" value="{{ filters.last_name or '' }}" placeholder="Apellido" style="width: auto; display: inline-block;">
+    <input type="text" class="form-control" id="last_name" name="last_name" value="{{ filters.last_name or '' }}" placeholder="Apellido" style="width: auto; display: inline-block;" pattern="[A-Za-zñÑáéíóúÁÉÍÓÚüÜ\s]+">
   </div>
   <div class="form-group mr-3" style="margin-bottom: 10px;">
     <label for="dni">DNI:</label>
-    <input type="text" class="form-control" id="dni" name="dni" value="{{ filters.dni or '' }}" placeholder="DNI" style="width: auto; display: inline-block;">
+    <input type="text" class="form-control" id="dni" name="dni" value="{{ filters.dni or '' }}" placeholder="DNI" style="width: auto; display: inline-block;" pattern="\d+">
   </div>
   <div class="form-group mr-3" style="margin-bottom: 10px;">
     <label for="email">Email:</label>
