--- a/admin/src/web/templates/ecuestre/show.html
+++ b/admin/src/web/templates/ecuestre/show.html
@@ -80,7 +80,7 @@
                 Eliminar
             </button>
         </form>
-        <a class="btn btn-warning" href="{{ url_for('ecuestre.index') }}">
+        <a class="btn btn-warning" href="{{ url_for('ecuestre.update', id=horse.id) }}">
             <i class="fas fa-edit me-1"></i>
             Editar
         </a>
